# config/routes.rb
@@ -12,6 +12,7 @@ Rails.application.routes.draw do
     namespace :v1 do
       # Timeline endpoint
       get "timeline", to: "timeline#index"
+      get "search", to: "search#index"
 
       resources :posts, except: [ :new, :edit ] do
         resource :rating, only: [ :show, :create, :update, :destroy ]
